; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_video_console.c_gc_paint_char.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_video_console.c_gc_paint_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32, i32, i8, i32, i32, i32)* }

@gc_buffer_columns = common dso_local global i32 0, align 4
@gc_buffer_rows = common dso_local global i32 0, align 4
@gc_buffer_attributes = common dso_local global i32* null, align 8
@gc_buffer_characters = common dso_local global i8* null, align 8
@gc_color_code = common dso_local global i32 0, align 4
@gc_buffer_colorcodes = common dso_local global i32* null, align 8
@gc_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8, i32)* @gc_paint_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gc_paint_char(i32 %0, i32 %1, i8 zeroext %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8 %2, i8* %7, align 1
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @gc_buffer_columns, align 4
  %12 = icmp ult i32 %10, %11
  br i1 %12, label %13, label %36

13:                                               ; preds = %4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @gc_buffer_rows, align 4
  %16 = icmp ult i32 %14, %15
  br i1 %16, label %17, label %36

17:                                               ; preds = %13
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @gc_buffer_columns, align 4
  %20 = mul i32 %18, %19
  %21 = load i32, i32* %5, align 4
  %22 = add i32 %20, %21
  %23 = zext i32 %22 to i64
  store i64 %23, i64* %9, align 8
  %24 = load i32, i32* %8, align 4
  %25 = load i32*, i32** @gc_buffer_attributes, align 8
  %26 = load i64, i64* %9, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  store i32 %24, i32* %27, align 4
  %28 = load i8, i8* %7, align 1
  %29 = load i8*, i8** @gc_buffer_characters, align 8
  %30 = load i64, i64* %9, align 8
  %31 = getelementptr inbounds i8, i8* %29, i64 %30
  store i8 %28, i8* %31, align 1
  %32 = load i32, i32* @gc_color_code, align 4
  %33 = load i32*, i32** @gc_buffer_colorcodes, align 8
  %34 = load i64, i64* %9, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  store i32 %32, i32* %35, align 4
  br label %36

36:                                               ; preds = %17, %13, %4
  %37 = load i32 (i32, i32, i8, i32, i32, i32)*, i32 (i32, i32, i8, i32, i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gc_ops, i32 0, i32 0), align 8
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %6, align 4
  %40 = load i8, i8* %7, align 1
  %41 = load i32, i32* %8, align 4
  %42 = call i32 %37(i32 %38, i32 %39, i8 zeroext %40, i32 %41, i32 0, i32 0)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
